@@ -1,3 +1,15 @@
+2009-07-30  Mike Fenton  <mike.fenton@torchmobile.com>
+
+         Reviewed by Adam Treat.
+
+         Add previously defined out support to PopupMenuQt for marking entries as
+         disabled and for selecting the desired item.
+
+         https://bugs.webkit.org/show_bug.cgi?id=27772
+
+         * platform/qt/PopupMenuQt.cpp:
+         (WebCore::PopupMenu::populate):
+
 2009-07-30  Darin Adler  <darin@apple.com>
 
         Reviewed by David Levin.
